// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snippets (default) > examples > 'GET /metadata (allow-multiple)' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.types.ServiceGetMetadataRequest;
import java.util.Arrays;
import java.util.Optional;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .build();

client.service().getmetadata(
    ServiceGetMetadataRequest
        .builder()
        .apiVersion("0.0.1")
        .tag(
            Arrays.asList(Optional.of("development"), Optional.of("public"))
        )
        .shallow(false)
        .build()
);
"
`;

exports[`snippets (default) > examples > 'GET /metadata (simple)' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.types.ServiceGetMetadataRequest;
import java.util.Arrays;
import java.util.Optional;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .build();

client.service().getmetadata(
    ServiceGetMetadataRequest
        .builder()
        .apiVersion("0.0.1")
        .tag(
            Arrays.asList(Optional.of("development"))
        )
        .shallow(false)
        .build()
);
"
`;

exports[`snippets (default) > examples > 'POST /big-entity (simple)' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.types.Actor;
import com.acme.acme.types.BigEntity;
import com.acme.acme.types.CastMember;
import com.acme.acme.types.CommonsEventInfo;
import com.acme.acme.types.CommonsEventInfoZero;
import com.acme.acme.types.CommonsEventInfoZeroType;
import com.acme.acme.types.ExtendedMovie;
import com.acme.acme.types.Migration;
import com.acme.acme.types.MigrationStatus;
import com.acme.acme.types.MovieType;
import java.util.Arrays;
import java.util.HashMap;
import java.util.Optional;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .build();

client.service().createbigentity(
    BigEntity
        .builder()
        .castMember(
            CastMember.of(
                Actor
                    .builder()
                    .name("John Doe")
                    .id("john.doe")
                    .build()
            )
        )
        .extendedMovie(
            ExtendedMovie
                .builder()
                .id("movie-sda231x")
                .title("Pulp Fiction")
                .from("Quentin Tarantino")
                .rating(8.5)
                .type(MovieType.MOVIE)
                .tag("tag-12efs9dv")
                .revenue(1000000L)
                .metadata(
                    new HashMap<String, Object>() {{
                        put("academyAward", true);
                        put("releaseDate", "2023-12-08");
                        put("ratings", new 
                        HashMap<String, Object>() {{put("rottenTomatoes", 97);
                            put("imdb", 7.6);
                        }});
                    }}
                )
                .cast(
                    Arrays.asList("John Travolta", "Samuel L. Jackson", "Uma Thurman", "Bruce Willis")
                )
                .build()
        )
        .eventInfo(
            CommonsEventInfo.of(
                CommonsEventInfoZero
                    .builder()
                    .id("event-12345")
                    .type(CommonsEventInfoZeroType.METADATA)
                    .data(
                        Optional.of(
                            new HashMap<String, Optional<String>>() {{
                                put("key1", Optional.of("val1"));
                                put("key2", Optional.of("val2"));
                            }}
                        )
                    )
                    .jsonString(Optional.of("abc"))
                    .build()
            )
        )
        .migration(
            Migration
                .builder()
                .name("Migration 31 Aug")
                .status(MigrationStatus.RUNNING)
                .build()
        )
        .build()
);
"
`;

exports[`snippets (default) > examples > 'POST /movie (invalid request body)' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "title"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets (default) > examples > 'POST /movie (simple)' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.types.Movie;
import com.acme.acme.types.MovieType;
import java.util.ArrayList;
import java.util.Arrays;
import java.util.HashMap;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .build();

client.service().createmovie(
    Movie
        .builder()
        .id("movie-c06a4ad7")
        .title("The Boy and the Heron")
        .from("Hayao Miyazaki")
        .rating(8.0)
        .type(MovieType.MOVIE)
        .tag("development")
        .revenue(1000000L)
        .prequel("movie-cv9b914f")
        .metadata(
            new HashMap<String, Object>() {{
                put("actors", new ArrayList<Object>(Arrays.asList("Christian Bale", "Florence Pugh", "Willem Dafoe")));
                put("releaseDate", "2023-12-08");
                put("ratings", new 
                HashMap<String, Object>() {{put("rottenTomatoes", 97);
                    put("imdb", 7.6);
                }});
            }}
        )
        .build()
);
"
`;

exports[`snippets (default) > exhaustive > 'GET /object/get-and-return-with-optio…' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody",
      "bigint"
    ],
    "message": "Expected number, got string"
  }
]"
`;

exports[`snippets (default) > exhaustive > 'POST /container/list-of-objects (inva…' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[0]",
      "string"
    ],
    "message": "Expected string, got boolean"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[1]",
      "invalid"
    ],
    "message": "\\"invalid\\" is not a recognized parameter for this endpoint"
  },
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody[2]",
      "string"
    ],
    "message": "Expected string, got number"
  }
]"
`;

exports[`snippets (default) > exhaustive > 'POST /container/list-of-objects (simp…' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.types.TypesObjectWithRequiredField;
import java.util.Arrays;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .build();

client.endpointsContainer().endpointsContainerGetAndReturnListOfObjects(
    Arrays.asList(
        TypesObjectWithRequiredField
            .builder()
            .string("one")
            .build(),
        TypesObjectWithRequiredField
            .builder()
            .string("two")
            .build(),
        TypesObjectWithRequiredField
            .builder()
            .string("three")
            .build()
    )
);
"
`;

exports[`snippets (default) > exhaustive > 'POST /container/list-of-primitives (s…' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import java.util.Arrays;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .build();

client.endpointsContainer().endpointsContainerGetAndReturnListOfPrimitives(
    Arrays.asList("one", "two", "three")
);
"
`;

exports[`snippets (default) > exhaustive > 'POST /container/map-prim-to-union (mi…' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.types.TypesMixedType;
import java.util.Arrays;
import java.util.HashMap;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .build();

client.endpointsContainer().endpointsContainerGetAndReturnMapOfPrimToUndiscriminatedUnion(
    new HashMap<String, TypesMixedType>() {{
        put("test", TypesMixedType.of(0.0));
        put("test2", TypesMixedType.of(true));
        put("test3", TypesMixedType.of("Test"));
        put("test4", TypesMixedType.of(
            Arrays.asList("1", "1", "1", "1")
        ));
    }}
);
"
`;

exports[`snippets (default) > file-upload > 'POST /' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody"
    ],
    "message": "Expected file value to be a string, got object"
  }
]"
`;

exports[`snippets (default) > file-upload > 'POST /just-file' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.core.FileStream;
import com.acme.acme.types.ServiceJustFileRequest;
import java.io.ByteArrayInputStream;
import java.nio.charset.StandardCharsets;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .build();

client.service().justfile(
    ServiceJustFileRequest
        .builder()
        .file(
            new FileStream(ByteArrayInputStream("Hello, world!".getBytes(StandardCharsets.UTF_8)))
        )
        .build()
);
"
`;

exports[`snippets (default) > file-upload > 'POST /just-file-with-query-params' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.core.FileStream;
import com.acme.acme.types.ServiceJustFileWithQueryParamsRequest;
import java.io.ByteArrayInputStream;
import java.nio.charset.StandardCharsets;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .build();

client.service().justfilewithqueryparams(
    ServiceJustFileWithQueryParamsRequest
        .builder()
        .integer(42)
        .file(
            new FileStream(ByteArrayInputStream("Hello, world!".getBytes(StandardCharsets.UTF_8)))
        )
        .maybeString("exists")
        .build()
);
"
`;

exports[`snippets (default) > imdb > 'GET /movies/{movieId} (simple)' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.types.ImdbGetMovieRequest;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .build();

client.imdb().getmovie(
    "movie_xyz",
    ImdbGetMovieRequest
        .builder()
        .build()
);
"
`;

exports[`snippets (default) > imdb > 'POST /movies/create-movie (simple)' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.types.CreateMovieRequest;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .build();

client.imdb().createmovie(
    CreateMovieRequest
        .builder()
        .title("The Matrix")
        .rating(8.2)
        .build()
);
"
`;

exports[`snippets (default) > multi-url-environment > 'Custom environment' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [],
    "message": "Multiple environments are not supported for single base URL environments; use the baseUrl option instead"
  }
]"
`;

exports[`snippets (default) > multi-url-environment > 'Invalid multi url environment' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [],
    "message": "Multiple environments are not supported for single base URL environments; use the baseUrl option instead"
  }
]"
`;

exports[`snippets (default) > multi-url-environment > 'Production environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Production\\" was not found"
  }
]"
`;

exports[`snippets (default) > multi-url-environment > 'Staging environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Staging\\" was not found"
  }
]"
`;

exports[`snippets (default) > multi-url-environment > 'Unrecognized environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;

exports[`snippets (default) > nullable > 'Body properties' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.core.Nullable;
import com.acme.acme.types.Metadata;
import com.acme.acme.types.NullableCreateUserRequest;
import java.time.OffsetDateTime;
import java.util.Arrays;
import java.util.Optional;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .url("https://api.example.com")
    .build();

client.nullable().createuser(
    NullableCreateUserRequest
        .builder()
        .username("john.doe")
        .avatar(
            Nullable.ofNull()
        )
        .tags(
            Optional.of(
                Arrays.asList("admin")
            )
        )
        .metadata(
            Metadata
                .builder()
                .createdAt(OffsetDateTime.parse("1980-01-01T00:00:00Z"))
                .updatedAt(OffsetDateTime.parse("1980-01-01T00:00:00Z"))
                .avatar(
                    Nullable.ofNull()
                )
                .activated(
                    Nullable.ofNull()
                )
                .build()
        )
        .build()
);
"
`;

exports[`snippets (default) > nullable > 'Invalid null value' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "requestBody"
    ],
    "message": "Expected non-null value, but got null"
  }
]"
`;

exports[`snippets (default) > nullable > 'Query parameters' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [
      "queryParameters[0]"
    ],
    "message": "Expected non-null value, but got null"
  }
]"
`;

exports[`snippets (default) > read-write-only > 'Body properties' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.types.User;
import com.acme.acme.types.UserProfile;
import com.acme.acme.types.UserProfileVerification;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .url("https://api.example.com")
    .build();

client.().createUser(
    User
        .builder()
        .id("string")
        .email("string")
        .password("password")
        .profile(
            UserProfile
                .builder()
                .name("name")
                .verification(
                    UserProfileVerification
                        .builder()
                        .verified("string")
                        .build()
                )
                .ssn("ssn")
                .build()
        )
        .build()
);
"
`;

exports[`snippets (default) > read-write-only > 'Readonly value in request' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.types.User;
import com.acme.acme.types.UserProfile;
import com.acme.acme.types.UserProfileVerification;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .url("https://api.example.com")
    .build();

client.().createUser(
    User
        .builder()
        .id("id")
        .email("string")
        .password("password")
        .profile(
            UserProfile
                .builder()
                .name("name")
                .verification(
                    UserProfileVerification
                        .builder()
                        .verified("string")
                        .build()
                )
                .ssn("ssn")
                .build()
        )
        .build()
);
"
`;

exports[`snippets (default) > required-headers > 'GET /plants (simple)' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .tenantId("my-tenant-id")
    .build();

client.plantstore().list();
"
`;

exports[`snippets (default) > required-headers > 'POST /plants (simple)' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.types.CreatePlantRequest;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .tenantId("my-tenant-id")
    .build();

client.plantstore().create(
    CreatePlantRequest
        .builder()
        .name("Fern")
        .price(12.99)
        .build()
);
"
`;

exports[`snippets (default) > single-url-environment-default > 'Production environment' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;
import com.acme.acme.core.Environment;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .environment(
        Environment.PRODUCTION
    )
    .build();

client.dummy().getdummy();
"
`;

exports[`snippets (default) > single-url-environment-default > 'Staging environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Staging\\" was not found"
  }
]"
`;

exports[`snippets (default) > single-url-environment-default > 'custom baseURL' 1`] = `
"package com.example.usage;

import com.acme.acme.AcmeAcmeClient;

AcmeAcmeClient client = AcmeAcmeClient
    .builder()
    .token("<YOUR_API_KEY>")
    .url("http://localhost:8080")
    .build();

client.dummy().getdummy();
"
`;

exports[`snippets (default) > single-url-environment-default > 'invalid baseURL and environment' 1`] = `
"[
  {
    "severity": "CRITICAL",
    "path": [],
    "message": "Cannot specify both baseUrl and environment options"
  }
]"
`;

exports[`snippets (default) > single-url-environment-default > 'invalid environment' 1`] = `
"[
  {
    "severity": "WARNING",
    "path": [],
    "message": "Environment \\"Unrecognized\\" was not found"
  }
]"
`;
